# midi2key

./: .pre-commit-config.yaml  Cargo.toml  Justfile  README.md
src/: action.rs  config.rs  handler.rs  katana.rs  main.rs  midi.rs  virtual_keyboard.rs
src/action/: midi.rs
