[package]
name = "midi2key"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ctrlc = "3.4.6"
dirs = "6.0.0"
env_logger = "0.11.8"
evdev = "0.13.1"
itertools = "0.14.0"
log = "0.4.27"
midi-msg = "0.8.0"
midir = "0.10.1"
midly = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.21"
